--- a/WildKarrde/app/src/main/AndroidManifest.xml
+++ b/WildKarrde/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addEvent"></activity>
+        <activity android:name=".login"></activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".addEvent" />
         <activity android:name=".addRecurringTask" />
         <activity android:name=".addDailyTask" />
         <activity android:name=".viewStats" />
