--- a/WildKarrde/app/src/main/AndroidManifest.xml
+++ b/WildKarrde/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:theme="@style/AppTheme">
         <activity android:name=".registration"
             android:parentActivityName=".login"></activity>
-        <activity android:name=".login" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
@@ -24,12 +23,13 @@
         <activity android:name=".viewDailyTasks" />
         <activity android:name=".pastReminders" />
         <activity android:name=".addReminder" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
