--- a/WildKarrde/build.gradle
+++ b/WildKarrde/build.gradle
@@ -24,3 +24,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.1'
+    archLifecycleVersion = '2.1.0'
+    coreTestingVersion = '2.1.0'
+    materialVersion = '1.0.0'
+}
