--- a/WildKarrde/app/build.gradle
+++ b/WildKarrde/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     //Commented out due to lifecycle components below
     //implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
